# botpack

./: .gitignore  BOTPACK_WORKLANE_STATUS.md  LICENSE  README.md  SPEC.md  SPEC_LETTA.md  botyard-spec.md  pyproject.toml
botpack/: __init__.py  assets.py  catalog.py  cli.py  cli_status.py  config.py  doctor.py  errors.py  fetch.py  install.py  introspect.py  issues.py  lock.py  logs_grep.py  manifest.py  manifest_edit.py  mcp.py  mcp_magic_number_server.py  mcp_smoke.py  migrate.py  models.py  paths.py  pep723.py  pkgs.py  prefetch.py  prune.py  registry.py  resolver.py  store.py  sync.py  toml_write.py  trust.py  trust_edit.py  verify.py
botpack/agentic/: __init__.py  models.py  runner.py  schema.py
botpack/letta/: __init__.py  client.py  drift.py  materialize.py  models.py  scan.py  workflows.py
botpack/tui/: matrix.py  (+6 more)
scripts/: opencode-tmux.sh  tui-tmux.sh
tests/: test_agentic_run_cmd.py  test_assets_catalog.py  test_botyard_agentic_runner.py  test_botyard_sync.py  test_botyward_config.py  test_btyard_cli.py  test_btyard_introspection.py  test_btyard_new_cli.py  test_cli_dx_contract.py  test_cli_root_and_get.py  test_fetch.py  test_install.py  test_install_offline.py  test_letta.py  test_lockfile.py  test_logs_grep.py  test_manifest_rewrite.py  test_mcp.py  test_mcp_smoke.py  test_migrate_from_smarty.py  test_pep723.py  test_pkgs_materialize.py  test_registry.py  test_resolver.py  test_store.py  test_trust_install.py  test_tui_config_snippets.py  test_tui_home_config_apply.py  test_tui_matrix.py  test_tui_matrix_run.py  test_tui_tmux.py  test_verify_prune.py
(+7 files in other folders)
